# libwasm

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  package.json
.circleci/: config.yml
include/: wasm.h
src/execution/: allocation.c  execution.c  instantiation.c  invocation.c  stack.c  store.c  value.c
src/parser/: instructions.c  module.c  types.c  values.c
src/print/: print.c
test/: CMakeLists.txt  fib.c  main.c
test/execution/: CMakeLists.txt  invocation.c  stack.c
test/parser/: CMakeLists.txt  code_section.c  data_section.c  element_section.c  export_section.c  function_section.c  function_type.c  global_section.c  global_type.c  import_section.c  instruction.c  limit.c  memory_section.c  module.c  name.c  result_type.c  sint.c  table_section.c  type_section.c  uint.c  value_type.c
tests/parser/: CMakeLists.txt  main.c
